@startuml

title __SEND's Class Diagram__\n

  namespace com.fahadali.intranet {
    namespace fragments.ui.send {
      class com.fahadali.intranet.fragments.ui.send.SendFragment {
          + onCreateView()
      }
    }
  }
  

  namespace com.fahadali.intranet {
    namespace fragments.ui.send {
      class com.fahadali.intranet.fragments.ui.send.SendViewModel {
          - mText : MutableLiveData<String>
          + SendViewModel()
          + getText()
      }
    }
  }
  

  com.fahadali.intranet.fragments.ui.send.SendFragment -up-|> androidx.fragment.app.Fragment
  com.fahadali.intranet.fragments.ui.send.SendFragment o-- com.fahadali.intranet.fragments.ui.send.SendViewModel : sendViewModel
  com.fahadali.intranet.fragments.ui.send.SendViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
